--- a/index.html
+++ b/index.html
@@ -5,39 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bahtiyar Ayhan | Stratejik Yönetim & Danışmanlık</title>
     <style>
-        :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; --gold: #d4af37; --bg: #f4f7f6; }
-        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: var(--bg); color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
+        :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; --gold: #d4af37; }
+        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
         .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
         .container { padding: 2rem; max-width: 950px; margin: auto; }
         
-        /* 1. BÖLÜM: YÖNETİM FELSEFESİ (TAM METİN) */
-        .box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--accent); }
+        /* FELSEFE BÖLÜMÜ */
+        .felsefe-box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--accent); }
         .quote { font-style: italic; color: var(--accent); font-weight: bold; border-left: 5px solid var(--accent); padding-left: 15px; margin-bottom: 20px; font-size: 1.2rem; }
-        .felsefe-text p { margin-bottom: 15px; text-align: justify; font-size: 1.1rem; }
+        .felsefe-text p { margin-bottom: 15px; text-align: justify; }
 
-        /* 2. BÖLÜM: TEŞHİS FORMU */
+        /* TEŞHİS FORMU */
         .form-box { background: #fff; padding: 25px; border-radius: 15px; border: 2px solid #2980b9; margin: 30px 0; }
         .form-box h3 { color: #2980b9; margin-top: 0; text-align: center; }
         .form-group { margin-bottom: 15px; }
         .form-group label { display: block; font-weight: bold; margin-bottom: 5px; }
-        .form-group input, .form-group textarea, .form-group select { width: 100%; padding: 12px; border: 1px solid #ccc; border-radius: 8px; box-sizing: border-box; }
+        .form-group input, .form-group textarea, .form-group select { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 8px; box-sizing: border-box; }
         .submit-btn { background: #2980b9; color: white; border: none; padding: 15px; width: 100%; border-radius: 8px; font-weight: bold; cursor: pointer; font-size: 1.2rem; transition: 0.3s; }
         .submit-btn:hover { background: #1a5276; }
 
-        /* 3. BÖLÜM: BAŞARI RAKAMLARI */
+        /* DİĞER BÖLÜMLER */
+        .cta-section { background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%); color: white; padding: 40px; border-radius: 20px; text-align: center; margin: 40px 0; border: 3px solid var(--gold); }
+        .cta-btn { display: inline-block; background: var(--gold); color: #2c3e50; padding: 18px 45px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.2rem; margin-top: 15px; }
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 25px 0; }
         .card { background: var(--white); border-bottom: 4px solid #27ae60; padding: 25px; border-radius: 15px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
-
-        /* 4. BÖLÜM: ÖDÜL VE SERTİFİKALAR */
-        .award-box { background: #fffdf2; border: 2px solid var(--gold); padding: 25px; border-radius: 15px; text-align: center; margin: 30px 0; }
-        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 15px; margin-top: 20px; }
-        .cert-card { background: white; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+        .award-section { background: #fffdf2; border: 2px solid var(--gold); padding: 25px; border-radius: 15px; text-align: center; margin: 25px 0; }
+        .award-section img { max-width: 100%; border-radius: 10px; margin-top: 15px; }
+        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px; margin-top: 2rem; }
+        .cert-card { background: white; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
         .cert-card img { width: 100%; border-radius: 5px; }
-
-        /* 5. BÖLÜM: İLETİŞİM VE SAYAÇ */
         .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
         .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 25px 0; }
-        .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 160px; }
+        .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 150px; }
     </style>
 </head>
 <body>
@@ -47,6 +46,9 @@
     </header>
 
     <div class="container">
-        <section class="box">
+        <section class="felsefe-box">
             <div class="quote">
-                "Fabrika Yönetimlerinde çok lokasyonlu şirketlerde Üretim, Planlama, İnsan Kaynakları, İdari İşler, Satinalma departmanlarında verimlilik, sadece süreçleri değil; bakış açısını da dönüşt
+                "Fabrika Yönetimlerinde çok lokasyonlu şirketlerde Üretim, Planlama, İnsan Kaynakları, İdari İşler, Satinalma departmanlarında verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar."
+            </div>
+            <div class="felsefe-text">
+                <p>Görev aldığım şirketlerde, tüm departman süreçlerinin iyileştirilmesi ve operasyonel mükemmellik hedefiyle aktif rol alıyorum. Tüm departmanların entegre Yönetim
