--- a/index.html
+++ b/index.html
@@ -3,74 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bahtiyar Ayhan | Stratejik Çözüm Ortağı</title>
+    <title>Bahtiyar Ayhan | Stratejik Yönetim & Danışmanlık</title>
     <style>
-        :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; --gold: #d4af37; --bg: #f4f7f6; }
-        body { font-family: 'Segoe UI', sans-serif; background: var(--bg); color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
+        :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; --gold: #d4af37; }
+        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
         .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
         .container { padding: 2rem; max-width: 950px; margin: auto; }
-        .box { background: var(--white); padding: 2rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2rem; border-top: 5px solid var(--accent); }
-        .cta-section { background: linear-gradient(135deg, #2c3e50, #1a252f); color: white; padding: 30px; border-radius: 20px; text-align: center; margin: 30px 0; border: 3px solid var(--gold); }
+        .box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--accent); }
+        .quote { font-style: italic; color: var(--accent); font-weight: bold; border-left: 5px solid var(--accent); padding-left: 15px; margin-bottom: 20px; font-size: 1.2rem; }
+        .cta-section { background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%); color: white; padding: 40px; border-radius: 20px; text-align: center; margin: 40px 0; border: 3px solid var(--gold); }
+        .cta-btn { display: inline-block; background: var(--gold); color: #2c3e50; padding: 18px 45px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.2rem; margin-top: 15px; }
         
-        /* FORM TASARIMI */
-        .form-box { background: #fff; padding: 25px; border-radius: 15px; border: 2px solid #2980b9; margin: 30px 0; }
-        .form-box h3 { color: #2980b9; margin-top: 0; text-align: center; }
-        .form-group { margin-bottom: 15px; }
-        .form-group label { display: block; font-weight: bold; margin-bottom: 5px; }
-        .form-group input, .form-group textarea, .form-group select { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 8px; box-sizing: border-box; }
-        .submit-btn { background: #2980b9; color: white; border: none; padding: 15px; width: 100%; border-radius: 8px; font-weight: bold; cursor: pointer; font-size: 1.1rem; }
+        /* OSGB / İŞ ORTAKLIĞI BÖLÜMÜ */
+        .partnership-box { background: #eef2f7; padding: 30px; border-radius: 15px; border: 2px dashed #2980b9; margin: 40px 0; text-align: center; }
+        .partnership-box h2 { color: #2980b9; margin-top: 0; }
         
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 25px 0; }
-        .card { background: var(--white); border-bottom: 4px solid #27ae60; padding: 20px; border-radius: 15px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+        .card { background: var(--white); border-bottom: 4px solid #27ae60; padding: 25px; border-radius: 15px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 15px; margin-top: 2rem; }
+        .cert-card { background: white; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+        .cert-card img { width: 100%; border-radius: 5px; }
         .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
-        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 20px 0; }
-        .contact-btn { display: inline-block; color: white; padding: 12px 25px; text-decoration: none; border-radius: 50px; font-weight: bold; }
+        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 25px 0; }
+        .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 150px; }
     </style>
 </head>
 <body>
     <header class="hero">
         <h1>BAHTİYAR AYHAN</h1>
-        <p>Stratejik Üretim Yönetimi & OSGB Çözüm Ortağı</p>
+        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik Uzmanı</p>
     </header>
 
     <div class="container">
         <section class="box">
-            <p><strong>"Verimlilik, bakış açısını değiştirmekle başlar."</strong> Çok lokasyonlu şirketlerde Üretim, İK ve Satınalma süreçlerini entegre ederek kârlılığı artırıyorum.</p>
+            <div class="quote">"Verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar."</div>
+            <p>Fabrika Yönetimlerinde çok lokasyonlu şirketlerde Üretim, Planlama, İnsan Kaynakları, İdari İşler, Satinalma departmanlarında tüm süreçlerin iyileştirilmesi ve operasyonel mükemmellik hedefiyle aktif rol alıyorum.</p>
+            <p>Haftalık koordinasyon toplantıları ve iş birliğine dayalı yönetim anlayışım ile şirketlerin sürdürülebilir büyümesine ve kültür değişikliğine katkı sağlıyorum.</p>
         </section>
 
-        <div class="form-box" id="teshis">
-            <h3>📋 Hızlı Teşhis & Ön Tespit Formu</h3>
-            <p style="font-size: 0.9rem; color: #666; text-align: center;">(OSGB Uzmanları ve Saha Yöneticileri İçin)</p>
-            <div class="form-group">
-                <label>Gözlemlenen Sorun Nedir?</label>
-                <select id="sorun">
-                    <option value="Stok ve Yığılma">Makine Aralarında Yığılma / Stok</option>
-                    <option value="Operatör Beklemesi">Operatörlerin Beklemesi</option>
-                    <option value="Aşırı Fire">Yüksek Oranda Fire / Çöp</option>
-                    <option value="Düzensizlik">Saha Düzensizliği (5S Eksikliği)</option>
-                    <option value="Diğer">Diğer Teknik Kısıtlar</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label>Fabrika/Şirket Adı (Opsiyonel)</label>
-                <input type="text" id="fabrika" placeholder="Hangi fabrikada gözlemlediniz?">
-            </div>
-            <div class="form-group">
-                <label>Notlarınız</label>
-                <textarea id="notlar" rows="3" placeholder="Gözleminizi buraya kısaca yazın..."></textarea>
-            </div>
-            <button class="submit-btn" onclick="sendToBahtiyar()">BİLGİLERİ BAHTİYAR USTA'YA GÖNDER</button>
-        </div>
-
         <div class="cta-section">
-            <h2>48 SAATTE DARBOĞAZ TEŞHİSİ</h2>
-            <p>İlk görüşme ve ön analiz ücretsizdir.</p>
-            <a href="https://wa.me/905427244122" class="contact-btn" style="background:var(--gold); color:#2c3e50;">📞 HEMEN RANDEVU AL</a>
+            <h2>HIZLI TEŞHİS & ÇÖZÜM</h2>
+            <p><strong>"Fabrikanızdaki darboğazı 48 saat içinde teşhis edelim. İlk görüşme ücretsizdir."</strong></p>
+            <a href="https://wa.me/905427244122" class="cta-btn">ŞİMDİ RANDEVU AL</a>
         </div>
 
         <div class="grid">
-            <div class="card"><h3>🔥 %75 Fire Azaltma</h3><p>Maliyetleri minimize ediyoruz.</p></div>
-            <div class="card"><h3>⚡ %25 Kapasite Artışı</h3><p>Verimliliği maksimize ediyoruz.</p></div>
+            <div class="card"><h3>🔥 %75 Fire Azaltma</h3><p>Maliyet odaklı süreç yönetimi.</p></div>
+            <div class="card"><h3>⚡ %25 Kapasite Artışı</h3><p>Yatırımsız üretim hacmi artışı.</p></div>
+        </div>
+
+        <section class="partnership-box">
+            <h2>🤝 OSGB & Danışmanlık İş Ortaklığı</h2>
+            <p>Portföyünüzdeki firmalara verimlilik ve operasyonel mükemmellik alanında katma değerli çözümler sunmak için çözüm ortağınız olmaya hazırım. OSGB hizmetlerinizi "Stratejik Verimlilik" ile güçlendirebiliriz.</p>
+        </section>
+
+        <div style="text-align: center; margin: 30px 0;">
+            <h3>🏆 Ulusal Uygulama Ödülü</h3>
+            <img src="Ödül.png" style="max-width:100%; border-radius:15px; border: 2px solid var(--gold);">
+        </div>
+
+        <div class="cert-grid">
+            <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma</p></div>
+            <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain</p></div>
+            <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction</p></div>
+            <div class="cert-card"><img src="sertifika4.png"><p>OpEx</p></div>
+            <div class="cert-card"><img src="sertifika5.png"><p>Proje</p></div>
+            <div class="cert-card"><img src="sertifika6.png"><p>Global</p></div>
+            <div class="cert-card"><img src="sertifika7.png"><p>Business</p></div>
         </div>
     </div>
 
@@ -78,19 +77,9 @@
         <div class="btn-group">
             <a href="tel:+905427244122" class="contact-btn" style="background:#2980b9">📞 Ara</a>
             <a href="https://wa.me/905427244122" class="contact-btn" style="background:var(--whatsapp)">💬 WhatsApp</a>
+            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn" style="background:var(--accent)">✉️ E-posta</a>
         </div>
         <p>📊 Toplam Ziyaret: <img src="https://komarev.com/ghpvc/?username=BahtiyarAyhan&color=orange&style=flat-square&label=GİRİŞ" style="vertical-align:middle;"></p>
     </footer>
-
-    <script>
-        function sendToBahtiyar() {
-            const sorun = document.getElementById('sorun').value;
-            const fabrika = document.getElementById('fabrika').value;
-            const notlar = document.getElementById('notlar').value;
-            const tel = "905427244122";
-            const text = `Usta Merhaba, Sahadan Bildiriyorum:%0A%0A*Sorun:* ${sorun}%0A*Fabrika:* ${fabrika}%0A*Notlar:* ${notlar}`;
-            window.location.href = `https://wa.me/${tel}?text=${text}`;
-        }
-    </script>
 </body>
 </html>
