--- a/index.html
+++ b/index.html
@@ -19,67 +19,17 @@
         .form-group { margin-bottom: 15px; }
         .form-group label { display: block; font-weight: bold; margin-bottom: 5px; }
         .form-group input, .form-group textarea, .form-group select { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 8px; box-sizing: border-box; }
-        
-        /* GÜNCELLENEN BUTON */
         .submit-btn { background: #2980b9; color: white; border: none; padding: 15px; width: 100%; border-radius: 8px; font-weight: bold; cursor: pointer; font-size: 1.3rem; transition: 0.3s; }
         .submit-btn:hover { background: #1a5276; }
 
         .cta-section { background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%); color: white; padding: 40px; border-radius: 20px; text-align: center; margin: 40px 0; border: 3px solid var(--gold); }
-        .cta-btn { display: inline-block; background: var(--gold); color: #2c3e50; padding: 18px 45px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.2rem; margin-top: 15px; }
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 25px 0; }
         .card { background: var(--white); border-bottom: 4px solid #27ae60; padding: 25px; border-radius: 15px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
         .award-section { background: #fffdf2; border: 2px solid var(--gold); padding: 25px; border-radius: 15px; text-align: center; margin: 25px 0; }
         .award-section img { max-width: 100%; border-radius: 10px; margin-top: 15px; }
-        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px; margin-top: 2rem; }
+        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 15px; margin-top: 2rem; }
         .cert-card { background: white; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
         .cert-card img { width: 100%; border-radius: 5px; }
+        
         .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
-        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 25px 0; }
-        .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 150px; }
-    </style>
-</head>
-<body>
-    <header class="hero">
-        <h1>BAHTİYAR AYHAN</h1>
-        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik Uzmanı</p>
-    </header>
-
-    <div class="container">
-        <section class="felsefe-box">
-            <div class="quote">
-                "Fabrika Yönetimlerinde çok lokasyonlu şirketlerde Üretim, Planlama, İnsan Kaynakları, İdari İşler, Satinalma departmanlarında verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar."
-            </div>
-            <div class="felsefe-text">
-                <p>Görev aldığım şirketlerde, tüm departman süreçlerinin iyileştirilmesi ve operasyonel mükemmellik hedefiyle aktif rol alıyorum. Tüm departmanların entegre Yönetim sistemi ile verimliliği artırırken maliyetleri düşürerek şirketin rekabet gücünü ileriye taşıdım.</p>
-                <p>Haftalık koordinasyon toplantılarıyla güçlendirdiğim, iş birliğine dayalı yönetim anlayışım, ekip motivasyonunu ve uyumu artırıyor. Yönetim ve idari kadrolarla kurduğum yakın iş birliği sayesinde, yenilikçi ve uygulanabilir çözümlerle sürekli iyileştirmeye odaklanıyorum.</p>
-                <p>Stratejik planlama, problem çözme ve takım ruhunu harmanlayan yaklaşımım; şirketlerin sürdürülebilir büyümesine ve sektörde lider konuma ulaşmasına katkı sağlamaya devam ediyor ve bunun sadece bilgi birikimi değil, kültür ve felsefe değişikliğinin de önemli olduğuna inanıyorum.</p>
-            </div>
-        </section>
-
-        <div class="form-box">
-            <h3>📋 Hızlı Teşhis & Ön Tespit Formu</h3>
-            <div class="form-group">
-                <label>Gözlemlenen Sorun</label>
-                <select id="sorun">
-                    <option value="Stok ve Yığılma">Makine Aralarında Yığılma / Stok</option>
-                    <option value="Operatör Beklemesi">Operatörlerin Beklemesi</option>
-                    <option value="Aşırı Fire">Yüksek Oranda Fire / Çöp</option>
-                    <option value="Düzensizlik">Saha Düzensizliği (5S Eksikliği)</option>
-                    <option value="Diğer">Diğer Teknik Kısıtlar</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label>Fabrika/Şirket Adı</label>
-                <input type="text" id="fabrika" placeholder="Hangi fabrikayı gözlemlediniz?">
-            </div>
-            <div class="form-group">
-                <label>Kısa Not</label>
-                <textarea id="notlar" rows="3"></textarea>
-            </div>
-            <button class="submit-btn" onclick="sendToBahtiyar()">GÖNDER</button>
-        </div>
-
-        <div class="cta-section">
-            <h2>HIZLI TEŞHİS & ÇÖZÜM</h2>
-            <p><strong>"Fabrikanızdaki darboğazı 48 saat içinde teşhis edelim. İlk görüşme ücretsizdir."</strong></p>
-            <a href="
+        .btn-
