--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         </div>
 
         <div class="grid">
-            <div class="card"><h3>🔥 %75 Fire Azaltma</h3><p>Verimlilik odaklı süreç yönetimi.</p></div> [cite: 55]
-            <div class="card"><h3>⚡ %25 Kapasite Artışı</h3><p>Yatırımsız üretim artışı.</p></div> [cite: 56]
+            <div class="card"><h3>🔥 %75 Fire Azaltma</h3><p>Verimlilik odaklı süreç yönetimi.</p></div> 
+            <div class="card"><h3>⚡ %25 Kapasite Artışı</h3><p>Yatırımsız üretim artışı.</p></div> 
         </div>
 
         <div class="award-section">
@@ -90,23 +90,23 @@
         </div>
 
         <div class="cert-grid">
-            <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma</p></div> [cite: 63]
-            <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain</p></div> [cite: 64]
-            <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction</p></div> [cite: 65]
-            <div class="cert-card"><img src="sertifika4.png"><p>OpEx</p></div> [cite: 66]
-            <div class="cert-card"><img src="sertifika5.png"><p>Proje</p></div> [cite: 67]
-            <div class="cert-card"><img src="sertifika6.png"><p>Global</p></div> [cite: 68]
-            <div class="cert-card"><img src="sertifika7.png"><p>Business</p></div> [cite: 69]
+            <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma</p></div> 
+            <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain</p></div> 
+            <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction</p></div> 
+            <div class="cert-card"><img src="sertifika4.png"><p>OpEx</p></div> 
+            <div class="cert-card"><img src="sertifika5.png"><p>Proje</p></div> 
+            <div class="cert-card"><img src="sertifika6.png"><p>Global</p></div> 
+            <div class="cert-card"><img src="sertifika7.png"><p>Business</p></div> 
         </div>
     </div>
 
     <footer class="footer">
         <div class="btn-group">
-            <a href="tel:+905427244122" class="contact-btn" style="background:#2980b9">📞 Ara</a> [cite: 74]
-            <a href="https://wa.me/905427244122" class="contact-btn" style="background:#25D366">💬 WhatsApp</a> [cite: 75]
-            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn" style="background:#e67e22">✉️ E-posta</a> [cite: 76]
+            <a href="tel:+905427244122" class="contact-btn" style="background:#2980b9">📞 Ara</a>
+            <a href="https://wa.me/905427244122" class="contact-btn" style="background:#25D366">💬 WhatsApp</a> 
+            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn" style="background:#e67e22">✉️ E-posta</a> 
         </div>
-        <p>📊 Toplam Ziyaret: <img src="https://komarev.com/ghpvc/?username=BahtiyarAyhan&color=orange&style=flat-square&label=GİRİŞ" style="vertical-align:middle;"></p> [cite: 78]
+        <p>📊 Toplam Ziyaret: <img src="https://komarev.com/ghpvc/?username=BahtiyarAyhan&color=orange&style=flat-square&label=GİRİŞ" style="vertical-align:middle;"></p> 
     </footer>
 
     <script>
